k8s/graphdb-nifi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/pontusvision: "true"
    io.kompose.service: graphdb-nifi
  name: graphdb-nifi
spec:
  containers:
  - args:
    - /bin/bash
    - -c
    - |2 
      #echo Waiting for elasticsearch service start...;\n  #while ! nc -z elasticsearch
      #do\n    #sleep 1;\n  #done;\n  echo Connected!;\n
      #echo "HEELLLLOOO"
      #/usr/bin/s3fs ${S3_BUCKET} ${MOUNT_POINT} -o uid=1000,gid=1000,use_cache=/tmp,url=https://s3.amazonaws.com,endpoint=${REGION},iam_role=${IAM_ROLE},allow_other,nosuid,nonempty,nodev,default_acl=${S3_ACL},retries=5 -d
      #echo "HEELLLLOOO"
      LD_LIBRARY_PATH=:/tmp
      /orientdb/bin/server.sh
    image: pontusvisiongdpr/pontus-track-graphdb-odb-pt:latest
    securityContext:
      privileged: true        # cannot be changed, or Object Storage Service Bucket cannot be attached

    name: graphdb-nifi
    ports:
    - containerPort: 8183
    - containerPort: 7000
    - containerPort: 3001
    - containerPort: 2480
    - containerPort: 5007
    resources: {}
    volumeMounts:
    - mountPath: /run/secrets/mapping-salesforce-graph
      subPath: mapping-salesforce-graph
      name: mapping-salesforce-graph
  hostname: graphdb-nifi
  restartPolicy: OnFailure
  subdomain: pontus-demo-com
  volumes:
  - name: mapping-salesforce-graph
    secret:
      secretName: mapping-salesforce-graph
status: {}
