k8s/pontus-lgpd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/pontusvision: "true"
    io.kompose.service: pontus-lgpd
  name: pontus-lgpd
spec:
  containers:
  - args:
    - /bin/bash
    - -c
    - |2

         getent hosts pontus-formio.pontus-demo-com
         getent hosts pontus-nifi.pontus-demo-com
         getent hosts pontus-comply-keycloak.pontus-demo-com
         echo Waiting for pontus-nifi service start just to reduce the number of JVMs starting at once...;
         nginx -g 'daemon off;'
    image: pontusvisiongdpr/pontus-comply-nginx-lgpd:latest
    name: pontus-lgpd
    ports:
    - containerPort: 18443
    resources: {}
    securityContext:
      privileged: true
  hostname: pontus-lgpd
  restartPolicy: OnFailure
  subdomain: pontus-demo-com
status: {}
