k8s/pontus-nifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/pontusvision: "true"
    io.kompose.service: pontus-nifi
    app: pontus-nifi
  name: pontus-nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pontus-nifi
  template:
    metadata:
      labels:
        app: pontus-nifi
        io.kompose.service: pontus-nifi
    spec:
      containers:
      - command:
        - /bin/bash
        - -c
        - |2
            getent hosts spacyapi
            echo Waiting for graphdb-nifi service start...;
            while [[ `/usr/bin/curl -s  -H 'Content-Type: application/json' -X POST -d '' http://graphdb-nifi:3001/home/vertex_labels` != *Object.Data_Source* ]] ; do
              sleep 1;
              echo waiting for graph to be ready ... got $(/usr/bin/curl -s  -H 'Content-Type: application/json' -X POST -d '' http://graphdb-nifi:3001/home/vertex_labels);
            done;
            export RES=$(/usr/bin/curl -s  -H 'Content-Type: application/json' -X POST -d '' http://graphdb-nifi:3001/home/vertex_labels);
            echo Waiting for vertex_labels... got this: $RES;
            echo Connected!;
            ../scripts/start.sh
        image: pontusvisiongdpr/pontus-extract-nifi:latest
        name: pontus-nifi
        ports:
        - containerPort: 8080
        - containerPort: 5006
        - containerPort: 5007
        resources: {}
        volumeMounts:
        - mountPath: "/run/secrets/s3-creds"
          subPath: s3-creds
          name: s3-creds
        - mountPath: "/run/secrets/salesforce-client-id"
          subPath: salesforce-client-id
          name: salesforce-client-id
        - mountPath: "/run/secrets/salesforce-client-secret"
          name: salesforce-client-secret
          subPath: salesforce-client-secret
        - mountPath: /run/secrets/salesforce-username
          name: salesforce-username
          subPath: salesforce-username
        - mountPath: /run/secrets/salesforce-password
          name: salesforce-password
          subPath: salesforce-password
        - mountPath: /run/secrets/office-365-auth-client-secret
          name: office-365-auth-client-secret
          subPath: office-365-auth-client-secret
        - mountPath: /run/secrets/office-365-auth-client-id
          name: office-365-auth-client-id
          subPath: office-365-auth-client-id
        - mountPath: /run/secrets/office-365-auth-tenant-id
          name: office-365-auth-tenant-id
          subPath: office-365-auth-tenant-id
        - mountPath: /run/secrets/watson-user-name
          name: watson-user-name
          subPath: watson-user-name
        - mountPath: /run/secrets/watson-password
          name: watson-password
          subPath: watson-password
        - mountPath: /run/secrets/google-creds-json
          name: google-creds-json
          subPath: google-creds-json
        - mountPath: /var/run/nifi-nlp
          name: pontus-nifi-claim0
      hostname: pontus-nifi
      #restartPolicy: OnFailure
      subdomain: pontus-demo-com
      volumes:
      - name: s3-creds
        secret:
          secretName: s3-creds
          
      - name: salesforce-client-id
        secret:
          secretName: salesforce-client-id
          
      - name: salesforce-client-secret
        secret:
          secretName: salesforce-client-secret
      - name: salesforce-username
        secret:
          secretName: salesforce-username
      - name: salesforce-password
        secret:
          secretName: salesforce-password
      - name: office-365-auth-client-secret
        secret:
          secretName: office-365-auth-client-secret
      - name: office-365-auth-client-id
        secret:
          secretName: office-365-auth-client-id
      - name: office-365-auth-tenant-id
        secret:
          secretName: office-365-auth-tenant-id
      - name: watson-user-name
        secret:
          secretName: watson-user-name
      - name: watson-password
        secret:
          secretName: watson-password
      - name: google-creds-json
        secret:
          secretName: google-creds-json
      - name: pontus-nifi-claim0
        persistentVolumeClaim:
          claimName: pontus-nifi-claim0
