k8s/pontus-lgpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f lgpd-odb-grafana-latest.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pontus-lgpd
  name: pontus-lgpd
spec:
  ports:
  - name: "18443"
    port: 18443
    targetPort: 18443
  selector:
    io.kompose.service: pontus-lgpd
status:
  loadBalancer: {}
