k8s/pontusvision-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pontusvision
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/pontusvision: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pontusvision: "true"
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        #except:
        #  - 10.0.0.0/8
        #  - 192.168.0.0/16
        #  - 172.16.0.0/20
  policyTypes:
  - Egress
  - Ingress
